# in-my-channels

./: README.md  app.py  inserir.py  insert.sql  pyproject.toml  videos.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: test_app.py
tests/DSA/: QUEUE.py  STACK.py
tests/OO/: main.py  setup.py
tests/OO/bancos/: agencia.py  banco.py
tests/OO/clientes/: cliente.py  pessoa_fisica.py  pessoa_juridica.py
tests/OO/contas/: conta.py  conta_corrente.py  conta_poupanca.py
tests/OO/operacoes/: deposito.py  operacao.py  saque.py
tests/OO/sistema_bancario.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
